fixed the content alignment issue, added css transition to hide the navigation bar in show page

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -2,12 +2,22 @@
 .fix-left-10{
     margin-left:-10px
 }
+.bar.bar-header{
+    transition: all ease-in-out 250ms;
+}
+.bar.bar-header.hide {
+    display: block;
+    transform: translate3d(0px, -100%, 0px);
+}
 .transparent-navigation-bar{
     position: absolute;
     top: 0;
     height: 40px;    
     left: 0;
     right: 0;
+}
+.platform-ios.platform-cordova:not(.fullscreen) .transparent-navigation-bar{
+    top:22px;
 }
 .transparent-navigation-bar .back, .transparent-navigation-bar .share {
     display: inline-block;
